# terminal-todo

./: .gitignore  Cargo.toml
src/: connection_manager.rs  db_manager.rs  main.rs  menu.rs
