[package]
name = "ToDos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["sqlite"] }
clearscreen = "2.0.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
rusqlite = "0.29.0"